--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,23 @@
 {
 	"manifest_version": 3,
 	"name": "__MSG_extensionName__",
+	"short_name": "__MSG_title__",
 	"version": "1.0",
 	"description": "__MSG_extensionDescription__",
+	"author": "__MSG_author__",
+	"homepage_url": "https://github.com/DemerNkardaz/Soni",
 	"permissions": ["activeTab", "tabs", "scripting"],
 	"default_locale": "en",
 	"action": {
 		"default_popup": "popup.html",
+		"default_title": "__MSG_extensionName__",
 		"default_icon": {
 			"48": "icon.png"
 		}
 	},
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "volume-booster@example.com",
+			"id": "soni-volume-regulator@example.com",
 			"strict_min_version": "109.0"
 		}
 	},
