--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 	"description": "__MSG_extensionDescription__",
 	"author": "__MSG_author__",
 	"homepage_url": "https://github.com/DemerNkardaz/Soni",
-	"permissions": ["activeTab", "tabs", "scripting"],
+	"permissions": ["activeTab", "tabs", "scripting", "storage"],
 	"default_locale": "en",
 	"action": {
 		"default_popup": "popup.html",
@@ -27,5 +27,13 @@
 	"background": {
 		"service_worker": "background.js",
 		"scripts": ["background.js"]
-	}
+	},
+	"content_scripts": [
+		{
+			"matches": ["<all_urls>"],
+			"js": ["content.js"],
+			"run_at": "document_start",
+			"all_frames": true
+		}
+	]
 }
