--- a/manifest.json
+++ b/manifest.json
@@ -33,8 +33,7 @@
 			"matches": ["<all_urls>"],
 			"js": ["content.js"],
 			"run_at": "document_start",
-			"all_frames": true,
-			"world": "MAIN"
+			"all_frames": true
 		}
 	]
 }
