--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
 	"manifest_version": 3,
-	"name": "__MSG_extensionName__",
+	"name": "__MSG_extName__",
 	"short_name": "__MSG_title__",
 	"version": "1.0",
-	"description": "__MSG_extensionDescription__",
+	"description": "__MSG_shortDesc__",
 	"author": "__MSG_author__",
 	"homepage_url": "https://github.com/DemerNkardaz/Soni",
 	"permissions": ["activeTab", "tabs", "scripting", "storage"],
 	"default_locale": "en",
 	"action": {
 		"default_popup": "popup.html",
-		"default_title": "__MSG_extensionName__",
+		"default_title": "__MSG_extName__",
 		"default_icon": {
 			"16": "media/icon16.png",
 			"32": "media/icon32.png",
