--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,9 @@
 	"browser_specific_settings": {
 		"gecko": {
 			"id": "soni-volume-regulator@nkardaz",
-			"strict_min_version": "109.0"
+			"data_collection_permissions": {
+				"required": ["none"]
+			}
 		}
 	},
 	"icons": {
